k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: dev
spec:
  selector:
    app: backend-dev
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  type: LoadBalancer
