k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: dev
spec:
  selector:
    app: frontend-dev
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: LoadBalancer
