k8s/internal-lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: internal-ingress-lb
  namespace: dev
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: frontend-dev   # frontend pod
